# robotica_movil

./: CMakeLists.txt  setup.sh
include/: A01633021.hpp  OP3_Arm.hpp
src/: A01633021.cpp  OP3_Arm.cpp  main.cpp
tests/: test.cpp
